display on iOS correctly

--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -9,7 +9,6 @@
 }
 
 body {
-  min-height: 2000px;
   padding-top: 60px;
   background: #eee; color: #666666;
 }  
